figuring things out

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="indexstyle.css"/>
         <title>index.html</title>
     </head>
     <body>
-        
-
+        <h1>Carolyn Saund</h1>
+        <img src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
+        <p>As you can see, this is a lovely photo of me</p>
+        <p>Resume</p>
+        <p>Bio</p>
     </body>
+
 </html>
+
