--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Carolyn Saund</h1>
-		<img src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
+		<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
 			<p>As you can see, this is a lovely photo of me</p>
 			<p>Resume</p>
 			<p>Bio</p>
