match index html layout to resume

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 		<title>index.html</title>
 	</head>
 	<body>
-		<h1>Carolyn Saund</h1>
-		<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
-			<p>As you can see, this is a lovely photo of me</p>
-			<p>Resume</p>
-			<p>Bio</p>
+		<div id="header"></div>
+		<div class="left"></div>
+		<div class="right">
+			<h1>Carolyn Saund</h1>
+				<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
+				<p>As you can see, this is a lovely photo of me</p>
+				<p>Resume</p>
+				<p>Bio</p>
+		</div>
+		<div id="footer"></div>
 	</body>
 
 </html>
