--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 		<title>index.html</title>
 	</head>
 	<body>
-		<div id="header"></div>
-		<div class="left"></div>
+		<div id="header">
+			<h1 id="name">Carolyn Saund</h1>
+		</div>
+		<div class="left">
+			<p><a href="">Resume</a></p>
+			<p><a href="">Bio</a></p>
+		</div>
 		<div class="right">
-			<h1>Carolyn Saund</h1>
-				<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
-				<p>As you can see, this is a lovely photo of me</p>
-				<p>Resume</p>
-				<p>Bio</p>
+			<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
+			<p class="info">As you can see, this is a lovely photo of me</p>
 		</div>
 		<div id="footer"></div>
 	</body>
