--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
 					<ul>Cognitive and Brain Sciences
 						<li>Cognitive Psychology</li>
 						<li>Cognitive Neuroscience</li>
-						<li>Statistics for Behavioral Sciences<li>
+						<li>Statistics for Behavioral Sciences</li>
 						<li>Experimental Psychology</li>
 						<li>Neurobiology</li>
 					</ul>	
