adding links between pages and making images local

--- a/resume.html
+++ b/resume.html
@@ -14,11 +14,11 @@
 			<div class="left">
 				<p>
 					<a href="http://www.linkedin.com/profile/view?id=226208567&trk=tab_pro">
-						<img src="http://www.bcjobs.ca/content/images/LinkedIn_logo.png"/></a>
+						<img src="LinkedIn_logo.png"/></a>
 				</p>
 				<p>
 					<a href="https://www.facebook.com/carolyn.saund?ref=tn_tnmn">
-						<img src="http://www.thedrum.com/uploads/drum_basic_article/90880/main_images/logo_facebook_f-convertido.png"/></a>
+						<img src="facebook_logo.png"/></a>
 				</p>
 			</div>
 			<div class="right">
