--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 		</head>
 		<body>
 			<div id="header">
-				<p id="name">Carolyn Saund</p>
+				<p id="name"><a href="index.html">Carolyn Saund</a></p>
 				<p id="email">
 					<a href="ca.m.saund@gmail.com">email: ca.m.saund@gmail.com</a>
 				</p>
