fixed img and css errors in index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<p><a href="bio.html">Bio</a></p>
 		</div>
 		<div class="right">
-			<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
+			<img id="headshot" src ="headshot.jpg" alt="Carolyn" />
 			<p class="info">As you can see, this is a lovely photo of me</p>
 		</div>
 		<div id="footer"></div>
