--- a/resume.html
+++ b/resume.html
@@ -14,11 +14,11 @@
 			<div class="left">
 				<p>
 					<a href="http://www.linkedin.com/profile/view?id=226208567&trk=tab_pro">
-						<img src="LinkedIn_logo.png"/></a>
+						<img src="LinkedIn_logo.png" alt="linkedIn"/></a>
 				</p>
 				<p>
 					<a href="https://www.facebook.com/carolyn.saund?ref=tn_tnmn">
-						<img src="facebook_logo.png"/></a>
+						<img src="facebook_logo.png" alt="facebook"/></a>
 				</p>
 			</div>
 			<div class="right">
