fixed errors in resume, hopefully

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 			</div>
 			<div class="left">
 				<p>
-					<a href="http://www.linkedin.com/profile/view?id=226208567&trk=tab_pro">
+					<a href="http://www.linkedin.com">
 						<img src="LinkedIn_logo.png" alt="linkedIn"/></a>
 				</p>
 				<p>
@@ -30,35 +30,34 @@
 					Dean's List all semesters
 				</p>
 				<h3 class="heading">Relevant Courses</h3>
-				<p>
-					<ul>Computer Science
+					Computer Science<ul>
 						<li>Data Structures</li>
 						<li>Machine Structure and Assmebly Language Programming</li>
 						<li>Discrete Mathematics</li>
 						<li>Linear Algebra</li>
 						<li>Logic</li>
 					</ul>
-					<ul>Cognitive and Brain Sciences
+					Cognitive and Brain Sciences<ul>
 						<li>Cognitive Psychology</li>
 						<li>Cognitive Neuroscience</li>
 						<li>Statistics for Behavioral Sciences</li>
 						<li>Experimental Psychology</li>
 						<li>Neurobiology</li>
 					</ul>	
-				</p>
 				<h3 class="heading">Professional Experience</h3>
 				<p>
 					<ul>
-					<li><ul>Tufts University School of Engineering, <span>Teaching Assistant</span>
-						, January 2012-Present<br>
-						<li><ul>Department of Computer Science
+					<li>Tufts University School of Engineering, <span>Teaching Assistant</span>
+						, January 2012-Present
+						<ul>
+						<li>Department of Computer Science<ul>
 							<li>Both for Introductory Computer Science and Machine Structure and Assembly Language Programming</li>
 							<li>Answer questions and run labs for students</li>
 							<li>Answer questions both during office hours and online on a forum</li>
 							<li>Assess individual and class progress</li>
 							<li>Provide course structure feedback to professors</li>
 						</ul></li>
-						<li><ul>Department of Biomedical Engineering
+						<li>Department of Biomedical Engineering<ul>
 							<li>Critique scientific papers</li>
 							<li>Teach laboratory skills such as pipet technique and sterile technique</li>
 							<li>Prepare laboratory materials</li>
@@ -80,12 +79,12 @@
 				</p>
 				<h3 class="heading">Skills</h3>
 				<p>
-					<ul>Languages
+					Languages<ul>
 						<li>C/C++</li>
 						<li>html/CSS</li>
 						<li>French (fluent)</li>
 					</ul>
-					<ul>Laboratory Skills
+					Laboratory Skills<ul>
 						<li>Gene Cloning with PCR</li>
 						<li>ELISA techniques</li>
 						<li>Sterile technique</li>
@@ -94,11 +93,11 @@
 				</p>
 				<h3 class="heading">Related Work</h3>
 				<p>
-					<ul>iGEM Genetics Competition
+					iGEM Genetics Competition<ul>
 						<li>Worked on biomedical gene insertion and proliferation in bacteria</li>
 						<li>Created a website to showcase project</li>
 					</ul>
-					<ul>Alpha Omicron Pi, <span>Vice President of Academic Development</span>
+					Alpha Omicron Pi, <span>Vice President of Academic Development</span><ul>
 						<li>Plan group study events for women in the chapter</li>
 						<li>Arrange tutoring groups for struggling women</li>
 						<li>Oversee management of affairs for women on academic probation</li>
