formatting layout to better fit screen

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 			<div id="header">
 				<p id="name"><a href="index.html">Carolyn Saund</a></p>
 				<p id="email">
-					<a href="ca.m.saund@gmail.com">email: ca.m.saund@gmail.com</a>
+					<a href="gmail.com">email: carolyn@saund.org</a>
 				</p>
 			</div>
 			<div class="left">
