--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="indexstyle.css"/>
+		<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="indexstyle.css"/>
+		<link rel="stylesheet" type="text/css" media="only screen and (man-device-width:719px)" href="indexstyle-small.css"/>
 		<title>index.html</title>
 	</head>
 	<body>
