--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<link type="text/css" rel="stylesheet" href="resumestyle.css"/>
+			<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="resumestyle.css"/>
+			<link rel="stylesheet" type="text/css" media="only screen and (man-device-width:719px)" href="resumestyle-small.css"/>
 			<title>resume</title>
 		</head>
 		<body>
