--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="indexstyle.css"/>
-		<link rel="stylesheet" type="text/css" media="only screen and (man-device-width:719px)" href="indexstyle-small.css"/>
+		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width:719px)" href="indexstyle-small.css"/>
 		<title>index.html</title>
 	</head>
 	<body>
