--- a/resume.html
+++ b/resume.html
@@ -31,14 +31,14 @@
 					Dean's List all semesters
 				</p>
 				<h3 class="heading">Relevant Courses</h3>
-					Computer Science<ul>
+					<p class="info">Computer Science<ul>
 						<li>Data Structures</li>
 						<li>Machine Structure and Assmebly Language Programming</li>
 						<li>Discrete Mathematics</li>
 						<li>Linear Algebra</li>
 						<li>Logic</li>
 					</ul>
-					Cognitive and Brain Sciences<ul>
+					<p class="info">Cognitive and Brain Sciences<ul>
 						<li>Cognitive Psychology</li>
 						<li>Cognitive Neuroscience</li>
 						<li>Statistics for Behavioral Sciences</li>
@@ -78,7 +78,7 @@
 					</li>
 					</ul>
 				<h3 class="heading">Skills</h3>
-				<p>
+				<p class="info">
 					Languages<ul>
 						<li>C/C++</li>
 						<li>html/CSS</li>
@@ -91,12 +91,12 @@
 						<li>Preparation of silk to concentrated solution</li>
 					</ul>
 				<h3 class="heading">Related Work</h3>
-				<p>
+				<p class="info">
 					iGEM Genetics Competition<ul>
 						<li>Worked on biomedical gene insertion and proliferation in bacteria</li>
 						<li>Created a website to showcase project</li>
 					</ul>
-					Alpha Omicron Pi, <span>Vice President of Academic Development</span><ul>
+					<p class="info">Alpha Omicron Pi, <span>Vice President of Academic Development</span><ul>
 						<li>Plan group study events for women in the chapter</li>
 						<li>Arrange tutoring groups for struggling women</li>
 						<li>Oversee management of affairs for women on academic probation</li>
