--- a/resume.html
+++ b/resume.html
@@ -84,7 +84,7 @@
 						<li>html/CSS</li>
 						<li>French (fluent)</li>
 					</ul>
-					Laboratory Skills<ul>
+					<p class="info">Laboratory Skills<ul>
 						<li>Gene Cloning with PCR</li>
 						<li>ELISA techniques</li>
 						<li>Sterile technique</li>
