making email quick to do

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 			<div id="header">
 				<p id="name"><a href="index.html">Carolyn Saund</a></p>
 				<p id="email">
-					<a href="gmail.com">email: carolyn@saund.org</a>
+					<a href="mailto:ca.m.saund@gmail.com">email: carolyn@saund.org</a>
 				</p>
 			</div>
 			<div class="left">
