holy fuck fixing everything

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="indexstyle.css"/>
 		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width:719px)" href="indexstyle-small.css"/>
-		<title>index.html</title>
+		<title>Carolyn Saund</title>
 	</head>
 	<body>
 		<div id="header">
@@ -14,8 +14,7 @@
 			<p><a href="bio.html">Bio</a></p>
 		</div>
 		<div class="right">
-			<img id="headshot" src ="headshot.jpg" alt="Carolyn" />
-			<p class="info">As you can see, this is a lovely photo of me</p>
+			<p class="info">under construction.</p>
 		</div>
 		<div id="footer"></div>
 	</body>
