--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="indexstyle.css"/>
-		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width:719px)" href="indexstyle-small.css"/>
 		<title>Carolyn Saund</title>
 	</head>
 	<body>
-		<div id="header">
-			<h1 id="name">Carolyn Saund</h1>
-		</div>
-		<div class="left">
-			<p><a href="resume.html">Resume</a></p>
-			<p><a href="bio.html">Bio</a></p>
-		</div>
-		<div class="right">
-			<p class="info">under construction.</p>
-		</div>
-		<div id="footer"></div>
+		EVERYTHING IS UNDERCONSTRUCTION.
 	</body>
 
 </html>
