--- a/resume.html
+++ b/resume.html
@@ -1,108 +1,9 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="resumestyle.css"/>
-			<link rel="stylesheet" type="text/css" media="only screen and (max-device-width:719px)" href="resumestyle-small.css"/>
 			<title>resume</title>
 		</head>
 		<body>
-			<div id="header">
-				<p id="name"><a href="index.html">Carolyn Saund</a></p>
-				<p id="email">
-					<a href="mailto:ca.m.saund@gmail.com">email: carolyn@saund.org</a>
-				</p>
-			</div>
-			<div class="left">
-				<p>
-					<a href="http://www.linkedin.com">
-						<img src="LinkedIn_logo.png" alt="linkedIn"/></a>
-				</p>
-				<p>
-					<a href="https://www.facebook.com/carolyn.saund?ref=tn_tnmn">
-						<img src="facebook_logo.png" alt="facebook"/></a>
-				</p>
-			</div>
-			<div class="right">
-				<h3 class="heading">Education</h3>
-				<p class="info">
-					Tufts University, 2015<br>
-					<span>Computer Science, Cognitive and Brain Sciences</span><br>
-					GPA: 3.67<br>
-					Dean's List all semesters
-				</p>
-				<h3 class="heading">Relevant Courses</h3>
-					<p class="info">Computer Science<ul>
-						<li>Data Structures</li>
-						<li>Machine Structure and Assmebly Language Programming</li>
-						<li>Discrete Mathematics</li>
-						<li>Linear Algebra</li>
-						<li>Logic</li>
-					</ul>
-					<p class="info">Cognitive and Brain Sciences<ul>
-						<li>Cognitive Psychology</li>
-						<li>Cognitive Neuroscience</li>
-						<li>Statistics for Behavioral Sciences</li>
-						<li>Experimental Psychology</li>
-						<li>Neurobiology</li>
-					</ul>	
-				<h3 class="heading">Professional Experience</h3>
-				<p>
-					<ul>
-					<li>Tufts University School of Engineering, <span>Teaching Assistant</span>
-						, January 2012-Present
-						<ul>
-						<li>Department of Computer Science<ul>
-							<li>Both for Introductory Computer Science and Machine Structure and Assembly Language Programming</li>
-							<li>Answer questions and run labs for students</li>
-							<li>Answer questions both during office hours and online on a forum</li>
-							<li>Assess individual and class progress</li>
-							<li>Provide course structure feedback to professors</li>
-						</ul></li>
-						<li>Department of Biomedical Engineering<ul>
-							<li>Critique scientific papers</li>
-							<li>Teach laboratory skills such as pipet technique and sterile technique</li>
-							<li>Prepare laboratory materials</li>
-						</ul></li>
-					</ul></li>
-					<li>Tufts University Computer Science Department, <span>Private Tutor</span>
-						, September 2012-Present<br>
-						<ul><li>Provide additional instruction on complex ideas outside of class</li>
-						<li>Encourage exploration of alternative solutions from those presented in class</li>
-					</ul></li>
-					<li>Tufts University Biomedical Engineering Laboratory, <span>Research Assitant</span>
-						, January 2012-September 2012<br>
-							<ul><li>Designed experiments to evaluate the effects of neurostimulants on growth of neurons in three-dimensional silk scaffolds</li>
-							<li>Trained in high-precision confocal microscopy</li>
-							<li>Developed laboratory solutions specific to requirements needed in experiments</li>
-						</ul>
-					</li>
-					</ul>
-				<h3 class="heading">Skills</h3>
-				<p class="info">
-					Languages<ul>
-						<li>C/C++</li>
-						<li>html/CSS</li>
-						<li>French (fluent)</li>
-					</ul>
-					<p class="info">Laboratory Skills<ul>
-						<li>Gene Cloning with PCR</li>
-						<li>ELISA techniques</li>
-						<li>Sterile technique</li>
-						<li>Preparation of silk to concentrated solution</li>
-					</ul>
-				<h3 class="heading">Related Work</h3>
-				<p class="info">
-					iGEM Genetics Competition<ul>
-						<li>Worked on biomedical gene insertion and proliferation in bacteria</li>
-						<li>Created a website to showcase project</li>
-					</ul>
-					<p class="info">Alpha Omicron Pi, <span>Vice President of Academic Development</span><ul>
-						<li>Plan group study events for women in the chapter</li>
-						<li>Arrange tutoring groups for struggling women</li>
-						<li>Oversee management of affairs for women on academic probation</li>
-						<li>Create events for women in the chapter to meet with their departement professors outside of class</li>
-						<li>Encourage individual academic growth</li>
-					</ul>
-			</div>
-			<div id="footer"></div>
+			literally all of the construction.
+		</body>
 	</html>
