stole alex's design for a starting point

--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Carolyn Saund</title>
-	</head>
-	<body>
-		EVERYTHING IS UNDERCONSTRUCTION.
-	</body>
+<!doctype html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head> 
+
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+	<link href="style/index.css" rel="stylesheet" type="text/css" />
+	<link href="style/style.css" rel="stylesheet" type="text/css" />
+
+
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css' />
+
+	<script type="text/javascript" src="script/jq.js"></script>
+	<script type="text/javascript" src="script/index.js"></script>
+
+	<title>Carolyn Saund</title>
+
+</head>
+
+<body>
+
+
+	<section class="center-600" id="intro">
+		<nav class="nav-effect">
+			<a href="">Resume</a>
+			<a href="">Github</a>
+			<a href="">Medium</a>
+			<a href="">Facebook</a>
+			<a href="">LinkedIn</a>
+		<!--<a href="#" id="proj-link">Projects</a>
+			<a href="#" id="insp-link">Inspiration</a>-->
+		</nav>
+
+		<img id="me-img" src="images/me_hiking.jpg" />
+
+		<p class="me-intro"> 
+		</p>
+
+		<div class="text-shader-1"></div>
+
+		<footer class="me-footer">
+		</footer>
+	
+	</section>	
+
+</body>
 
 </html>
