another nav bar?

--- a/index.html
+++ b/index.html
@@ -24,16 +24,22 @@
 
 	<section class="center-600" id="intro">
 		<nav class="nav-effect">
-			<a href="">Resume</a>
-			<a href="">Github</a>
+			<a href="">Who</a>
+			<a href="">What</a>
 			<a href="">Medium</a>
 			<a href="">Facebook</a>
 			<a href="">LinkedIn</a>
 		<!--<a href="#" id="proj-link">Projects</a>
 			<a href="#" id="insp-link">Inspiration</a>-->
 		</nav>
+		<nav class="nav-effect">
+			<a href="">do</a>
+			<a href="">make</a>
+			<a href="">say</a>
+			<a href="">think</a>
+		</nav>
 
-		<img id="me-img" src="images/me_hiking.jpg" />
+		<img id="me-img" src="" />
 
 		<p class="me-intro"> 
 		</p>
