added contact icons, prettying things

--- a/index.html
+++ b/index.html
@@ -22,26 +22,46 @@
 <body>
 
 
-	<section class="center-600" id="intro">
+	<section class="center" id="intro">
+		<nav class="contact-icons">
+			<a href="http://www.facebook.com/carolyn.saund">
+				<img class="square" src="images/facebook.png"></a>
+			<a href="http://www.linkedin.com/profile/view?id=226208567&trk=spm_pic">
+				<img class="square" src="images/linkedin.png"></a>
+			<a href="http://twitter.com/carolynmsaund">
+				<img class="square" src="images/twitter.png"></a>
+			<a href="http://github.com/csaund">
+				<img class="square" src="images/github.png"></a>
+			<a href="mailto:carolynsaund@gmail.com">
+				<img class="square" src="images/gmail.png"></a>
+
+		</nav>
 		<nav class="nav-effect">
 			<a href="">Who</a>
 			<a href="">What</a>
-			<a href="">Medium</a>
-			<a href="">Facebook</a>
-			<a href="">LinkedIn</a>
-		<!--<a href="#" id="proj-link">Projects</a>
-			<a href="#" id="insp-link">Inspiration</a>-->
 		</nav>
-		<nav class="nav-effect">
+		<nav class="nav-effect" id="lower-nav">
 			<a href="">do</a>
 			<a href="">make</a>
 			<a href="">say</a>
 			<a href="">think</a>
 		</nav>
+	</section>
 
-		<img id="me-img" src="" />
+	<section class="lower-content">
+		<img class="round" id="me-img" src="images/me_hiking.jpg">
 
-		<p class="me-intro"> 
+		<p class="me-intro">
+		Lorem ipsum dolor sit amet, maiorum omnesque te vix. Ei virtute officiis intellegat quo, eu inimicus facilisis adipiscing eam. Ridens discere euripidis te vix, id clita volumus platonem quo. Te mutat molestie signiferumque nec, ex mentitum repudiare conceptam mei, quo ea nulla docendi epicuri.<br>
+
+Ius ad dolorem invidunt apeirian, vim te unum habeo adversarium. Apeirian mediocrem inciderint sit an. Has percipit sapientem an. In mea omnesque accusata, no quo mollis commodo ocurreret, an erat erant instructior vis. Te vim eleifend democritum. Te quot idque has, eum quas delenit expetendis no.<br>
+
+Dolore mollis ut cum. Nam vide docendi an. Ex copiosae apeirian vis. Per ex dicant legimus neglegentur, no amet aliquip nostrum eum. Ei legimus probatus eos, eos aliquip signiferumque at.<br>
+
+Putant patrioque deterruisset sea te, quando omnesque at vix. Expetenda periculis constituto ex cum, animal persecuti quo ea, an his viderer laboramus. Eum no eros omnis laudem, pri ne dicunt mandamus ocurreret, te facer harum vim. Id sit erant tation accusam. <br>
+
+Legimus appellantur duo ea. Illum legendos antiopam id duo, clita ponderum definitiones cu ius. Ius ea verterem recusabo, omnes libris delenit an vel, soleat pertinax imperdiet vis at. Sit choro laoreet id, vix cu quis summo. Mea dictas animal consectetuer no.	<br>
+ 
 		</p>
 
 		<div class="text-shader-1"></div>
