added a where page, bad css

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
 		</nav>
 		<nav class="nav-effect">
-			<a href="">Who</a>
+			<a href="index.html">Who</a>
 			<a href="">What</a>
+			<a href="pages/where.html">Where</a>
 		</nav>
 		<nav class="nav-effect" id="lower-nav">
 			<a href="">do</a>
