made bio not lorem ipsum

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head> 
-
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 	<link href="style/index.css" rel="stylesheet" type="text/css" />
 	<link href="style/style.css" rel="stylesheet" type="text/css" />
+	<link rel="shortcut icon" href="images/koru.jpg" type="image/png">
 
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css' />
@@ -50,19 +50,14 @@
 	</section>
 
 	<section class="lower-content">
-		<img class="round" id="me-img" src="images/me_hiking.jpg">
+		<img class="my-bio" id="me-img" src="images/me_hiking.jpg">
 
-		<p class="me-intro">
-		Lorem ipsum dolor sit amet, maiorum omnesque te vix. Ei virtute officiis intellegat quo, eu inimicus facilisis adipiscing eam. Ridens discere euripidis te vix, id clita volumus platonem quo. Te mutat molestie signiferumque nec, ex mentitum repudiare conceptam mei, quo ea nulla docendi epicuri.<br>
-
-Ius ad dolorem invidunt apeirian, vim te unum habeo adversarium. Apeirian mediocrem inciderint sit an. Has percipit sapientem an. In mea omnesque accusata, no quo mollis commodo ocurreret, an erat erant instructior vis. Te vim eleifend democritum. Te quot idque has, eum quas delenit expetendis no.<br>
-
-Dolore mollis ut cum. Nam vide docendi an. Ex copiosae apeirian vis. Per ex dicant legimus neglegentur, no amet aliquip nostrum eum. Ei legimus probatus eos, eos aliquip signiferumque at.<br>
-
-Putant patrioque deterruisset sea te, quando omnesque at vix. Expetenda periculis constituto ex cum, animal persecuti quo ea, an his viderer laboramus. Eum no eros omnis laudem, pri ne dicunt mandamus ocurreret, te facer harum vim. Id sit erant tation accusam. <br>
-
-Legimus appellantur duo ea. Illum legendos antiopam id duo, clita ponderum definitiones cu ius. Ius ea verterem recusabo, omnes libris delenit an vel, soleat pertinax imperdiet vis at. Sit choro laoreet id, vix cu quis summo. Mea dictas animal consectetuer no.	<br>
- 
+		<p class="my-bio" id="me-intro">
+		This site is currently under construction! Let's hope this
+		thanksgiving break in between polishing my cover letter and 
+		getting some research work done (and maybe blowing some glass 
+		and climbing at home!) I sit my ass down and add easy as stuff 
+		like friggin' "hidden" classes and buttons to this page.
 		</p>
 
 		<div class="text-shader-1"></div>
