--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css' />
 
 	<script type="text/javascript" src="script/jq.js"></script>
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="script/index.js"></script>
-
 	<title>Carolyn Saund</title>
 
 </head>
@@ -37,27 +37,31 @@
 
 		</nav>
 		<nav class="nav-effect">
-			<a href="index.html">Who</a>
-			<a href="">What</a>
-			<a href="pages/where.html">Where</a>
+			<a>Who</a>
+			<a>What</a>
+			<a>Where</a>
 		</nav>
 		<nav class="nav-effect" id="lower-nav">
-			<a href="">do</a>
-			<a href="">make</a>
-			<a href="">say</a>
-			<a href="">think</a>
+			<a>do</a>
+			<a>make</a>
+			<a>say</a>
+			<a>think</a>
 		</nav>
 	</section>
 
 	<section class="lower-content">
-		<img class="my-bio" id="me-img" src="images/me_hiking.jpg">
+		<img class="my-who" id="me-img" src="images/me_hiking.jpg">
 
-		<p class="my-bio" id="me-intro">
+		<p class="my my-who" id="me-intro">
 		This site is currently under construction! Let's hope this
 		thanksgiving break in between polishing my cover letter and 
 		getting some research work done (and maybe blowing some glass 
 		and climbing at home!) I sit my ass down and add easy as stuff 
 		like friggin' "hidden" classes and buttons to this page.
+		</p>
+
+		<p class="my my-what" id="me">
+		Who knows what's happening now! 
 		</p>
 
 		<div class="text-shader-1"></div>
