--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css' />
 
 	<script type="text/javascript" src="script/jq.js"></script>
-	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="script/index.js"></script>
 	<title>Carolyn Saund</title>
 
