--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css' />
 
-	<script type="text/javascript" src="script/jq.js"></script>
 	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="script/index.js"></script>
 	<title>Carolyn Saund</title>
@@ -37,22 +36,22 @@
 
 		</nav>
 		<nav class="nav-effect">
-			<a>Who</a>
-			<a>What</a>
-			<a>Where</a>
+			<a class="who">Who</a>
+			<a class="what">What</a>
+			<a class="where">Where</a>
 		</nav>
 		<nav class="nav-effect" id="lower-nav">
-			<a>do</a>
-			<a>make</a>
-			<a>say</a>
-			<a>think</a>
+			<a class="do">do</a>
+			<a class="make">make</a>
+			<a class="say">say</a>
+			<a class="think">think</a>
 		</nav>
 	</section>
 
 	<section class="lower-content">
 		<img class="my-who" id="me-img" src="images/me_hiking.jpg">
 
-		<p class="my my-who" id="me-intro">
+		<p class="my who" id="me-intro">
 		This site is currently under construction! Let's hope this
 		thanksgiving break in between polishing my cover letter and 
 		getting some research work done (and maybe blowing some glass 
@@ -60,7 +59,7 @@
 		like friggin' "hidden" classes and buttons to this page.
 		</p>
 
-		<p class="my my-what" id="me">
+		<p class="my what" id="me">
 		Who knows what's happening now! 
 		</p>
 
