tabs work added some text and comments

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</section>
 
 	<section class="lower-content">
-		<img class="my-who" id="me-img" src="images/me_hiking.jpg">
+		<img id="me-img" src="images/me_hiking.jpg">
 
 		<p class="my who" id="me-intro">
 		This site is currently under construction! Let's hope this
@@ -59,8 +59,28 @@
 		like friggin' "hidden" classes and buttons to this page.
 		</p>
 
-		<p class="my what" id="me">
-		Who knows what's happening now! 
+		<p class="my what">
+		This is the eventual home of what I like to do, projects I make,
+		pieces I write, and stuff I think.
+		</p>
+
+		<p class="my do">
+		Stuff I like to do!
+		</p>
+
+		<p class="my make">
+		Projects I've made!
+		</p>
+		<p class="my say">
+		Blahblahblahblahblah
+		</p>
+		<p class="my think">
+		links to cool stuff
+		</p>
+
+		<p class="my where">
+		Since this is my webpage and I do wud i wan, this is going to
+		be the home of my travel maps.
 		</p>
 
 		<div class="text-shader-1"></div>
