tried adding google maps. nothing happened. I'm tired

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="script/index.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js"></script>
 	<title>Carolyn Saund</title>
 
 </head>
@@ -79,9 +80,10 @@
 		</p>
 
 		<p class="my where">
-		Since this is my webpage and I do wud i wan, this is going to
-		be the home of my travel maps.
+		I love travelling. Here are the places I've been!		
 		</p>
+		<div class="my where map-canvas" id="world-map">
+		</div>
 
 		<div class="text-shader-1"></div>
 
