tried to do stuff with google maps it's broken

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
 		<p class="my where">
 		I love travelling. Here are the places I've been!		
 		</p>
-		<div class="my where map-canvas" id="world-map">
-		</div>
+		<iframe class="my where"
+		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCTUVRXlFaNvO7Aj6pES11lekEXSsr7VIc&q=San+Francisco">
+		</iframe>
+		<iframe class="my where" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d28437275.562602606!2d153.97706679999996!3d-29.535384049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1416925692107">
+		</iframe>
+		<!--<div class="my where map-canvas" id="world-map">
+		</div>-->
 
 		<div class="text-shader-1"></div>
 
