--- a/index.html
+++ b/index.html
@@ -66,21 +66,42 @@
 		</p>
 
 		<p class="my do">
-		Stuff I like to do!
+		For coding projects, please check out what I've made. <br>
+		Rock climbing, ice climbing, half marathons, kayaking, cycling(?)
 		</p>
 
 		<p class="my make">
-		Projects I've made!
-		</p>
-		<p class="my say">
-		Blahblahblahblahblah
-		</p>
-		<p class="my think">
-		links to cool stuff
+		I want a nice place to display code samples, so currently I'm trying to figure out how that's going
+		to work. Some cool projects I've made that I'd love to talk about are</p><br>
+			<ul class="my make">
+				<li>Building a (simple) Probabilistic Model of Cognition in church</li>
+				<li>Genetic algorithm to find best path through farm fields</li>
+				<li>Type inference implemented in ML</li>
+				<li>A simple Chess AI</li>
+				<li>This web page which taught me oh so much about frontend dev. Please help me.</li>
+			</ul><br>
+		<p class="my make">
+		This work will be up on my github as soon as I find all the code for it. I didn't really get this whole
+		"show off projects you've done" thing until this year.
 		</p>
 
+		<p class="my say">
+		This is going to be the home of my blog. I'm not a "blogger" per say, but  when I do have things
+		that are publishible I think that's pretty nifty. 
+		</p>
+
+		<p class="my think">
+		This will be the home of links to a lot of great things I've seen, read, or otherwise intellectually
+		ingested that I think everyone should take part in. Some are a lot harder to digest than others.
+		A short list currently is: </p><br>
+		<ul class="my think">
+			<li><a href="http://www.amazon.com/G%C3%B6del-Escher-Bach-Eternal-Golden/dp/0465026567">Godel, Escher, Bach</a></li>
+			<li><a href="https://probmods.org/">Probabilistic Models of Cognition</a></li>
+			<li><a href="http://www.ted.com/talks/dan_dennett_on_dangerous_memes?language=en">Dangerous Memes</a></li>
+		</ul>
+
 		<p class="my where">
-		I love travelling. Here are the places I've been!		
+		This will be the home of my travel blog
 		</p>
 		<iframe class="my where"
 		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCTUVRXlFaNvO7Aj6pES11lekEXSsr7VIc&q=San+Francisco">
