updated text and added resume links

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 		<img id="me-img" src="images/me_hiking.jpg">
 
 		<p class="my who" id="me-intro">
-		This site is currently under construction! Let's hope this
-		thanksgiving break in between polishing my cover letter and 
-		getting some research work done (and maybe blowing some glass 
-		and climbing at home!) I sit my ass down and add easy as stuff 
-		like friggin' "hidden" classes and buttons to this page.
+		This site is currently under construction. In the meantime, take a look 
+		at all the pretty CSS I wrote here at my <a href="http://github.com/csaund">github</a> and 
+		my <a href="csaund_resume.pdf">resume</a>. I promise as soon as I finish my first 
+		mobile app (seriously, how hard is it to find a list maker that reads my mind and is exactly
+		what I want oh whatever I'll just make it myself) and come back from Vietnam. 
 		</p>
 
 		<p class="my what">
 		This is the eventual home of what I like to do, projects I make,
-		pieces I write, and stuff I think.
+		pieces I write, and stuff I think. 
 		</p>
 
 		<p class="my do">
@@ -75,9 +75,8 @@
 		to work. Some cool projects I've made that I'd love to talk about are</p><br>
 			<ul class="my make">
 				<li>Building a (simple) Probabilistic Model of Cognition in church</li>
-				<li>Genetic algorithm to find best path through farm fields</li>
 				<li>Type inference implemented in ML</li>
-				<li>A simple Chess AI</li>
+				<li>Learning Go by making a Go AI</li>
 				<li>This web page which taught me oh so much about frontend dev. Please help me.</li>
 			</ul><br>
 		<p class="my make">
