changing style to be more feminine

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
 	<link href="style/index.css" rel="stylesheet" type="text/css" />
 	<link href="style/style.css" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="images/koru.jpg" type="image/png">
-
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css' />
 
@@ -80,13 +78,17 @@
 				<li>This web page which taught me oh so much about frontend dev. Please help me.</li>
 			</ul><br>
 		<p class="my make">
-		This work will be up on my github as soon as I find all the code for it. I didn't really get this whole
-		"show off projects you've done" thing until this year.
+		Many of my projects are located on my <a href="http://github.com/csaund">github</a>.
 		</p>
 
 		<p class="my say">
-		This is going to be the home of my blog. I'm not a "blogger" per say, but  when I do have things
-		that are publishible I think that's pretty nifty. 
+		Stay tuned for TEDx video!<br>
+		In the meantime, enjoy</p><br>
+		<ul class="my say">
+			<li>A piece on <a href="https://medium.com/@caro.lyn/deep-learning-evolution-and-why-intelligence-is-not-just-recognition-8590533cd638">deep learning and human intelligence</a></li>
+			<li>A piece on <a href="https://medium.com/@caro.lyn/when-is-it-ok-to-hit-on-a-woman-in-stem-2316f7349680">
+				office social dynamics</a></li>
+		</ul>
 		</p>
 
 		<p class="my think">
