--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 		<div class="text-shader-1"></div>
 
 		<footer class="me-footer">
+			<p>Created by Carolyn Saund</p>
+			<p>carolynsaund@gmail.com</p>
+			<p>last edited 22 Jan 2014</p>
 		</footer>
 	
 	</section>	
