--- a/index.html
+++ b/index.html
@@ -70,20 +70,24 @@
 
 		<p class="my make">
 		I want a nice place to display code samples, so currently I'm trying to figure out how that's going
-		to work. Some cool projects I've made that I'd love to talk about are</p><br>
+		to work. Some cool projects I've made that I'd love to talk about are
+		</p>
+		<p class="my make">
 			<ul class="my make">
 				<li>Building a (simple) Probabilistic Model of Cognition in church</li>
 				<li>Type inference implemented in ML</li>
 				<li>Learning Go by making a Go AI</li>
 				<li>This web page which taught me oh so much about frontend dev. Please help me.</li>
-			</ul><br>
+			</ul>
+		</p>
 		<p class="my make">
 		Many of my projects are located on my <a href="http://github.com/csaund">github</a>.
 		</p>
 
 		<p class="my say">
-		Stay tuned for TEDx video!<br>
-		In the meantime, enjoy</p><br>
+		Stay tuned for TEDx video!
+		In the meantime, enjoy
+		</p>
 		<ul class="my say">
 			<li>A piece on <a href="https://medium.com/@caro.lyn/deep-learning-evolution-and-why-intelligence-is-not-just-recognition-8590533cd638">deep learning and human intelligence</a></li>
 			<li>A piece on <a href="https://medium.com/@caro.lyn/when-is-it-ok-to-hit-on-a-woman-in-stem-2316f7349680">
@@ -116,6 +120,11 @@
 			<p>Created by Carolyn Saund</p>
 			<p>carolynsaund@gmail.com</p>
 			<p>last edited 22 Jan 2014</p>
+			<p>this site is constantly under <br>
+				construction. If you have <br>
+				comments or questions,
+				feel <br>
+				free to email</p>
 		</footer>
 	
 	</section>	
