updating hella content

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		</nav>
 		<nav class="nav-effect" id="lower-nav">
 			<a class="do">do</a>
-			<a class="make">make</a>
-			<a class="say">say</a>
-			<a class="think">think</a>
+			<a class="make">code</a>
+			<a class="say">words</a>
+			<a class="think">thoughts</a>
 		</nav>
 	</section>
 
@@ -51,23 +51,31 @@
 		<img id="me-img" src="images/me_hiking.jpg">
 
 		<p class="my who" id="me-intro">
-		This site is currently under construction. In the meantime, take a look 
-		at all the pretty CSS I wrote here at my <a href="http://github.com/csaund">github</a> and 
-		my <a href="csaund_resume.pdf">resume</a>. I promise as soon as I finish my first 
-		mobile app (seriously, how hard is it to find a list maker that reads my mind and is exactly
-		what I want oh whatever I'll just make it myself) and come back from Vietnam. 
+		Quicklinks: <a href="http://github.com/csaund">github</a> and <a href="csaund_resume.pdf">resume</a>.  
 		</p>
+		<p class="my who" id="me-intro">
+			<b>About Me</b> <br>
+				I will receive my B.S. in Computer Science and Cognitive
+				and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br>
+				I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br>
+				I have also been described as a world traveller. Check out what I <b>do</b> and <b>where</b> I've been up above.  
+		</p>
+		<p class="my who" id="me-intro">
+			<b>Professional Goals</b><br>
+			I am searching for a company that speaks to my ideal increase-awesome, decrease-suck world balance. Which is to say, I want to work somewhere that cares about its <b>global positive impact</b>. Whether it's tools that enable others to be more effective, or a direct channel for charitable influence, I care deeply about improving the world around me.<br>
+			I hope to attend a PhD program in Machine Learning within the next 5 years. 
 
 		<p class="my what">
-		This is the eventual home of what I like to do, projects I make,
-		pieces I write, and stuff I think. 
+		Apologies, this tab is still empty.
 		</p>
 
 		<p class="my do">
-		For coding projects, please check out what I've made. <br>
-		Rock climbing, ice climbing, half marathons, kayaking, cycling(?)
+		Rock climbing, ice climbing, half marathons, kayaking, cycling
 		</p>
 
+		<p class="my make">
+		Many of my projects are located on my <a href="http://github.com/csaund">github</a>.
+		</p>
 		<p class="my make">
 		I want a nice place to display code samples, so currently I'm trying to figure out how that's going
 		to work. Some cool projects I've made that I'd love to talk about are
@@ -81,7 +89,10 @@
 			</ul>
 		</p>
 		<p class="my make">
-		Many of my projects are located on my <a href="http://github.com/csaund">github</a>.
+			<b>Current Side Projects</b>
+				Presently, I am working on building my first mobile apps (android) which are "ReaList," a
+				list-keeping app that actually does all the things you want it to do, and "FuxWit" -- think
+				Reddit meets YikYak/Twitter for location-based information sharing. 
 		</p>
 
 		<p class="my say">
@@ -96,8 +107,7 @@
 		</p>
 
 		<p class="my think">
-		This will be the home of links to a lot of great things I've seen, read, or otherwise intellectually
-		ingested that I think everyone should take part in. Some are a lot harder to digest than others.
+		Many of great things I've seen, read, or otherwise intellectually ingested that I think everyone should take part in. Some are harder to digest than others.
 		A short list currently is: </p><br>
 		<ul class="my think">
 			<li><a href="http://www.amazon.com/G%C3%B6del-Escher-Bach-Eternal-Golden/dp/0465026567">Godel, Escher, Bach</a></li>
@@ -105,9 +115,6 @@
 			<li><a href="http://www.ted.com/talks/dan_dennett_on_dangerous_memes?language=en">Dangerous Memes</a></li>
 		</ul>
 
-		<p class="my where">
-		This will be the home of my travel blog
-		</p>
 		<iframe class="my where"
 		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCTUVRXlFaNvO7Aj6pES11lekEXSsr7VIc&q=San+Francisco">
 		</iframe>
