styling code for samples, also embedded TED talk

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				I will receive my B.S. in Computer Science and Cognitive
 				and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br>
 				I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br>
-				I have also been described as a world traveller. Check out what I <b>do</b> and <b>where</b> I've been up above.  
+				I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out what I <b>do</b> and <b>where</b> I've been up above.  
 		</p>
 		<p class="my who" id="me-intro">
 			<b>Professional Goals</b><br>
@@ -70,7 +70,7 @@
 		</p>
 
 		<p class="my do">
-		Rock climbing, ice climbing, half marathons, kayaking, cycling
+		Coming soon: pictures of rock climbing in Vietnam, ice climbing in New Hampshire, those damn half-marathons I keep signing up for, my latest sea kayak adventure, and that one time I tried to bike 134 miles on a hybrid bike with no training. 
 		</p>
 
 		<p class="my make">
@@ -94,6 +94,13 @@
 				list-keeping app that actually does all the things you want it to do, and "FuxWit" -- think
 				Reddit meets YikYak/Twitter for location-based information sharing. 
 		</p>
+		<p class="my make">
+			<b>Code Samples</b>
+			<p class="my make code-style">
+			Well this would be a great place for a code sample 
+			if only I could figure out how to do auto styling in CSS. 
+			</p>
+		</p>
 
 		<p class="my say">
 		Stay tuned for TEDx video!
@@ -112,8 +119,11 @@
 		<ul class="my think">
 			<li><a href="http://www.amazon.com/G%C3%B6del-Escher-Bach-Eternal-Golden/dp/0465026567">Godel, Escher, Bach</a></li>
 			<li><a href="https://probmods.org/">Probabilistic Models of Cognition</a></li>
-			<li><a href="http://www.ted.com/talks/dan_dennett_on_dangerous_memes?language=en">Dangerous Memes</a></li>
 		</ul>
+		<p class="my think">
+			<b>Dangerous Memes</b>
+			<iframe src="https://embed-ssl.ted.com/talks/dan_dennett_on_dangerous_memes.html" width="640" height="360" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		</p>
 
 		<iframe class="my where"
 		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCTUVRXlFaNvO7Aj6pES11lekEXSsr7VIc&q=San+Francisco">
