uninterrupted hospital coding best coding

--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 			<b>Current Side Projects</b>
 				Presently, I am working on building my first mobile apps (android) which are "ReaList," a
 				list-keeping app that actually does all the things you want it to do, and "FuxWit" -- think
-				Reddit meets YikYak/Twitter for location-based information sharing. 
+				Reddit meets YikYak/Twitter for location-based information sharing. On both projects I design UI and do front-end development. <br>
+				I am also in the middle of writing a Go AI. My plan for that is to use Theano's ML library to train a neural net on Go game states and use a reinforcement learning algorithm to determine ideal game states. Last time I did this (with <a href="https://github.com/csaund/deep-pink.git">Chess</a>) it was really slow, so we'll see if it gets any better. 
 		</p>
+		<!--
 		<p class="my make">
 			<b>Code Samples</b>
 			<p class="my make code-style">
@@ -101,6 +103,7 @@
 			if only I could figure out how to do auto styling in CSS. 
 			</p>
 		</p>
+		-->
 
 		<p class="my say">
 		Stay tuned for TEDx video!
@@ -125,11 +128,14 @@
 			<iframe src="https://embed-ssl.ted.com/talks/dan_dennett_on_dangerous_memes.html" width="640" height="360" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 		</p>
 
-		<iframe class="my where"
-		  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCTUVRXlFaNvO7Aj6pES11lekEXSsr7VIc&q=San+Francisco">
-		</iframe>
-		<iframe class="my where" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d28437275.562602606!2d153.97706679999996!3d-29.535384049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1416925692107">
-		</iframe>
+		<p class="my where">
+			I grew up in <b>San Carlos, California</b>, in Silicon Valley. Now I am a happy transplant to the <b>Boston/Cambridge</b> area. <br>
+			Coming soon: custom google maps of my recent adventures.
+			<!--
+			<iframe width="600" height="450" frameborder="0" style="border:0" src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=600x300&maptype=roadmap
+&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
+&markers=color:red%7Clabel:C%7C40.718217,-73.998284"></iframe>-->
+		</p>
 
 		<div class="text-shader-1"></div>
 
