updated what page to have community service

--- a/index.html
+++ b/index.html
@@ -66,7 +66,30 @@
 			I hope to attend a PhD program in Machine Learning within the next 5 years. 
 
 		<p class="my what">
-		Apologies, this tab is still empty.
+			If you may want to hire me, please look at my <a href="csaund_resume.pdf">resume</a>.
+		</p>
+		<p class="my what">
+			<b>How I spend my time</b><br>
+				When I am not wiggling my appendages in funny ways or running off to far corners of the earth, these are the ways I like to pass the days.
+		</p>
+		<p class="my what">
+			<b>Leadership and Community Service</b><br>
+			<ul class="my what">
+				<li>President of Women in Computer Science chapter at Tufts University</li>
+				<li>Vice President of Academic Development at Alpha Omicron Pi</li>
+				<li>Organizer of Undergraduate Student Committee for Faculty hiring in Tufts Computer Science Department</li>
+				<li>Instructor/Coordinator of Girls Computer Club while abroad</li>
+				<li>Girl Scout Gold Awawrd</li>
+			</ul>
+		</p>
+		<p class="my what">
+			<b>Other Memberships</b>
+			<ul class="my what">
+				<li>Cognitive Science Society</li>
+				<li>Topics in Cognitive Science</li>
+				<li>Machine Learning and Data Science Meetup, Boston</li>
+				<li>Tufts Mountain Club (Trip Leader)</li>
+			</ul>
 		</p>
 
 		<p class="my do">
