just updated word content

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</p>
 
 		<p class="my do">
-		Coming soon: pictures of rock climbing in Vietnam, ice climbing in New Hampshire, those damn half-marathons I keep signing up for, my latest sea kayak adventure, and that one time I tried to bike 134 miles on a hybrid bike with no training. 
+		<b>Coming soon:</b> pictures of rock climbing in Vietnam, ice climbing in New Hampshire, those damn half-marathons I keep signing up for, my latest sea kayak adventure, and that one time I tried to bike 134 miles on a hybrid bike with no training. 
 		</p>
 
 		<p class="my make">
@@ -129,8 +129,9 @@
 		-->
 
 		<p class="my say">
-		Stay tuned for TEDx video!
-		In the meantime, enjoy
+			Find some of my more expressive moments here.
+			Stay tuned for my TEDx video!
+			In the meantime, enjoy
 		</p>
 		<ul class="my say">
 			<li>A piece on <a href="https://medium.com/@caro.lyn/deep-learning-evolution-and-why-intelligence-is-not-just-recognition-8590533cd638">deep learning and human intelligence</a></li>
