--- a/new_design/index.html
+++ b/new_design/index.html
@@ -21,29 +21,30 @@
 
 	<div class="header">
 		<a href="http://www.facebook.com/carolyn.saund">
-				<img class="square" src="images/facebook.png"></a>
+				<img src="images/facebook.png"></a>
 		<a href="http://www.linkedin.com/profile/view?id=226208567&trk=spm_pic">
-				<img class="square" src="images/linkedin.png"></a>
+				<img src="images/linkedin.png"></a>
 		<a href="http://twitter.com/carolynmsaund">
-				<img class="square" src="images/twitter.png"></a>
+				<img src="images/twitter.png"></a>
 		<a href="http://github.com/csaund">
-				<img class="square" src="images/github.png"></a>
+				<img src="images/github.png"></a>
 		<a href="mailto:carolynsaund@gmail.com">
-				<img class="square" src="images/gmail.png"></a>
+				<img src="images/gmail.png"></a>
+	</div>
+	
+	<div class="content-banner">
+		
 	</div>
 
-	<section class="lower-content">
-	</section>
-		<footer class="footer">
-			<p>Created by Carolyn Saund // 
-			   carolynsaund@gmail.com //
-			   last edited 22 Jan 2014 //
-			   this site is constantly under
-				construction. If you have 
-				comments or questions,
-				feel 
-				free to email
-		</footer>
+	<footer class="footer">
+		<p>Created by Carolyn Saund // 
+		   carolynsaund@gmail.com //
+		   last edited 22 Jan 2014 //
+		   this site is constantly under
+  		   construction. If you have 
+		   comments or questions,
+		   feel free to email
+	</footer>
 
 </body>
 
