more pink less footer

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
 
 		<p class="my say">
 			Find some of my more expressive moments here.
-			Stay tuned for my TEDx video!
-			In the meantime, enjoy
+			Enjoy
 		</p>
 		<ul class="my say">
 			<li>A piece on <a href="https://medium.com/@caro.lyn/deep-learning-evolution-and-why-intelligence-is-not-just-recognition-8590533cd638">deep learning and human intelligence</a></li>
@@ -163,16 +162,18 @@
 
 		<div class="text-shader-1"></div>
 
+		<!---
 		<footer class="me-footer">
 			<p>Created by Carolyn Saund</p>
 			<p>carolynsaund@gmail.com</p>
-			<p>last edited 22 Jan 2014</p>
+			<p>last edited 22 Feb 2015</p>
 			<p>this site is constantly under <br>
 				construction. If you have <br>
 				comments or questions,
 				feel <br>
 				free to email</p>
 		</footer>
+		-->
 	
 	</section>	
 
