--- a/wics.html
+++ b/wics.html
@@ -14,18 +14,18 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
+		<link rel="stylesheet" href="reveal.js/css/reveal.css">
+		<link rel="stylesheet" href="reveal.js/css/theme/sky.css" id="theme">
 
 		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'reveal.js/css/print/pdf.css' : 'reveal.js/css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 
@@ -53,22 +53,23 @@
 						<h2>Jobs and Internships</h2>
 					</section>
 					<section>
-						<p class="fragment">Prepare to Interview</p>
-							<p><span class="fragment highlight-red">Resume Building</span> <span class="fragment highlight-blue">LaTeX demos</span> <span class="fragment highlight-red">Personal Sites</span></p>
-
+						<p>Prepare to Interview</p>
+							<p><span class="fragment highlight-red">Resume Building</span></p>
+							<p><span class="fragment highlight-blue">LaTeX demos</span></p>
+							<p><span class="fragment highlight-red">Personal Sites</span></p>
 						<aside class="notes">
 							This slide has fragments which are also stepped through in the notes window.
 						</aside>
 					</section>
 					<section>
-						<p class="fragment">Find a Position</p>
-						<p><span class="fragment highlight-red">Match your interests</span> 
-							<span class="fragment highlight-blue">Match your skills</span>
+						<p>Find a Position</p>
+						<p><span class="fragment highlight-red">Match your interests</span> </p>
+						<p><span class="fragment highlight-blue">Match your skills</span> </p>
 					</section>
 					<section>
-						<p class="fragment">Get the Job</p>
-						<p><span class="fragment highlight-red">Technical Interview Tips</span>
-							<span class="fragment highlight-blue">Questions you should ask</span>
+						<p>Get the Job</p>
+						<p><span class="fragment highlight-red">Technical Interview Tips</span></p>
+						<p><span class="fragment highlight-blue">Questions you should ask</span></p>
 					</section>
 				</section>
 
@@ -211,12 +212,12 @@
 
 				// Optional reveal.js plugins
 				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true },
-					{ src: 'plugin/notes/notes.js', async: true }
+					{ src: 'reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'reveal.js/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'reveal.js/plugin/zoom-js/zoom.js', async: true },
+					{ src: 'reveal.js/plugin/notes/notes.js', async: true }
 				]
 			});
 
