updated heading sizes

--- a/wics.html
+++ b/wics.html
@@ -53,22 +53,22 @@
 						<h2>Jobs and Internships</h2>
 					</section>
 					<section>
-						<p>Prepare to Interview</p>
-							<p><span class="fragment highlight-red">Resume Building</span></p>
+						<h2>Prepare to Interview</h2>
+							<p><span class="fragment highlight-blue">Resume Building</span></p>
 							<p><span class="fragment highlight-blue">LaTeX demos</span></p>
-							<p><span class="fragment highlight-red">Personal Sites</span></p>
+							<p><span class="fragment highlight-blue">Personal Sites</span></p>
 						<aside class="notes">
 							This slide has fragments which are also stepped through in the notes window.
 						</aside>
 					</section>
 					<section>
-						<p>Find a Position</p>
-						<p><span class="fragment highlight-red">Match your interests</span> </p>
+						<h2>Find a Position</h2>
+						<p><span class="fragment highlight-blue">Match your interests</span> </p>
 						<p><span class="fragment highlight-blue">Match your skills</span> </p>
 					</section>
 					<section>
-						<p>Get the Job</p>
-						<p><span class="fragment highlight-red">Technical Interview Tips</span></p>
+						<h2>Get the Job</h2>
+						<p><span class="fragment highlight-blue">Technical Interview Tips</span></p>
 						<p><span class="fragment highlight-blue">Questions you should ask</span></p>
 					</section>
 				</section>
